--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ nav a:hover {
 }
 
 button:hover, a:hover {
-	color: #6000c4 !important;
+	color: #9d85df !important;
 }
 
 .dropdown-item.active {
