--- a/style.css
+++ b/style.css
@@ -22,9 +22,9 @@ p.my_padding {
 
 .jumbotron {
   background-image: url("./Images/Computer Science Design Sample.jpg");
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
-  color: #9d85df;
+  /*color: #9d85df;*/
   font-style: italic;
   background-color: transparent;
 }
@@ -115,14 +115,20 @@ button:hover, a:hover {
 }
 
 div.transbox {
-  margin: 10px;
+  margin: 0px;
   background-color: #ffffff;
   border: 1px solid black;
   opacity: 0.6;
+  padding: 0px;
 }
 
 div.transbox p {
   font-size: 14px;
   font-weight: bold;
   color: #000000;
+}
+
+div.top {
+  margin-bottom: 375px !important;
+  padding: 0px !important;
 }
